--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.1.0",
+    "bcrypt": "^4.0.1",
+    "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "lowdb": "^1.0.0",
-    "pug": "^2.0.4",
-    "shortid": "^2.2.15",
-    "cookie-parser": "^1.4.5",
     "md5": "^2.2.1",
-    "bcrypt": "^4.0.1"
+    "pug": "^2.0.4",
+    "shortid": "^2.2.15"
   },
   "engines": {
     "node": "12.x"
