--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "lowdb": "^1.0.0",
     "md5": "^2.2.1",
     "pug": "^2.0.4",
-    "shortid": "^2.2.15"
+    "shortid": "^2.2.15",
+    "cloudinary": "^1.21.0"
   },
   "engines": {
     "node": "12.x"
